@@ -1,6 +1,11 @@
 2013-05-28  Jesse  <jesse.emond@hotmail.com>
 
 	* Vec2.cs:
+	* PhysicsEntity.cs: 
+
+2013-05-28  Jesse  <jesse.emond@hotmail.com>
+
+	* Vec2.cs:
 	* ChangeLog:
 	* PhysicsEntity.cs:
 	* StickManRangedSpell.cs: 
